--- a/libs/libft/Makefile
+++ b/libs/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: chillion <marvin@42.fr>                    +#+  +:+       +#+         #
+#    By: chillion <chillion@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/05/24 13:40:15 by chillion          #+#    #+#              #
-#    Updated: 2022/05/24 13:40:18 by chillion         ###   ########.fr        #
+#    Updated: 2023/02/02 15:38:41 by chillion         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,7 @@
 NAME = libft.a
 
 CC = gcc
-FLAGS = -Wall -Wextra -Werror -I includes/
+FLAGS = -g3 -Wall -Wextra -Werror -Iincludes/ -MMD -MP
 SRC_DIR = sources/
 OBJ_DIR = objects/
 AR = ar rc
@@ -31,52 +31,23 @@ MAGENTA = \033[0;35m
 CYAN = \033[0;36m
 NC = \033[0m
 
-SRCS = ft_isalpha.c	\
-	ft_isdigit.c	\
-	ft_isalnum.c	\
-	ft_isascii.c	\
-	ft_isprint.c	\
-	ft_strlen.c	\
-	ft_memset.c	\
-	ft_bzero.c	\
-	ft_memcpy.c	\
-	ft_memmove.c	\
-	ft_strlcpy.c	\
-	ft_strlcat.c	\
-	ft_toupper.c	\
-	ft_tolower.c	\
-	ft_strchr.c	\
-	ft_strrchr.c	\
-	ft_strncmp.c	\
-	ft_memchr.c	\
-	ft_memcmp.c	\
-	ft_strnstr.c	\
-	ft_atoi.c	\
-	ft_calloc.c	\
-	ft_strdup.c	\
-	ft_substr.c	\
-	ft_strjoin.c	\
-	ft_strtrim.c	\
-	ft_split.c	\
-	ft_itoa.c	\
-	ft_strmapi.c	\
-	ft_striteri.c	\
-	ft_putchar_fd.c	\
-	ft_putstr_fd.c	\
-	ft_putendl_fd.c	\
-	ft_putnbr_fd.c	\
-	ft_putchar.c	\
-	ft_putnbr.c	\
-	ft_putstr.c	ft_nb_size.c	ft_strdouble.c	ft_putnbr_base.c	ft_puthex_base.c	ft_basecheck.c	ft_hex_size.c	\
-	ft_printf.c	ft_format_dixu.c	ft_format_scp.c	ft_long_strict_atoi.c	ft_strjoin_free.c	ft_strjoin_free.c	ft_zalloc.c	\
-	ft_free.c	ft_trio_free.c	get_next_line.c	 ft_sqrt.c	ft_chr_on_str.c	ft_strdup_init.c	\
+SRCS =	ft_isalpha.c	ft_isdigit.c	ft_isalnum.c	ft_isascii.c	ft_isprint.c	ft_strlen.c	\
+		ft_memset.c	ft_bzero.c	ft_memcpy.c	ft_memmove.c	ft_strlcpy.c	ft_strlcat.c	ft_toupper.c	\
+		ft_tolower.c	ft_strchr.c	ft_strrchr.c	ft_strncmp.c	ft_memchr.c	ft_memcmp.c	ft_strnstr.c	\
+		ft_atoi.c	ft_calloc.c	ft_strdup.c	ft_substr.c	ft_strjoin.c	ft_strtrim.c	ft_split.c	ft_itoa.c	\
+		ft_strmapi.c	ft_striteri.c	ft_putchar_fd.c	ft_putstr_fd.c	ft_putendl_fd.c	ft_putnbr_fd.c	\
+		ft_putchar.c	ft_putnbr.c	ft_putstr.c	ft_nb_size.c	ft_strdouble.c	ft_putnbr_base.c	\
+		ft_puthex_base.c	ft_basecheck.c	ft_hex_size.c	ft_printf.c	ft_format_dixu.c	ft_format_scp.c	\
+		ft_long_strict_atoi.c	ft_strjoin_free.c	ft_strjoin_free.c	ft_zalloc.c	ft_free.c	ft_trio_free.c	\
+		get_next_line.c	 ft_sqrt.c	ft_chr_on_str.c	ft_strdup_init.c	\
 
 OBJS = $(SRCS:%.c=%.o)
 
 SRC = $(addprefix $(SRC_DIR),$(SRCS))
 OBJ = $(addprefix $(OBJ_DIR),$(OBJS))
+DEPS = $(OBJ:%.o=%.d)
 
-OBJF = .cache_exists
+OBJF = ${OBJ_DIR}.cache_exists
 
 all : ${NAME}
 
@@ -85,13 +56,14 @@ ${NAME} : ${OBJ}
 	${AR} ${NAME} ${OBJ}
 	@echo "${NC}"
 
-${OBJ_DIR}%.o : ${SRC_DIR}%.c | $(OBJF)
+${OBJ_DIR}%.o : ${SRC_DIR}%.c $(OBJF) Makefile
 	@echo "${BLUE}###${NC}Creation du fichier ${@:%.c=%.o}${BLUE}###${ORANGE}"
 	${CC} ${FLAGS} -c $< -o $@
 	@echo "${NC}"
 
 $(OBJF):
 	@mkdir -p ${OBJ_DIR}
+	@touch ${OBJF}
 
 clean :
 	@echo "${RED}###${NC}Nettoyage des fichiers .o${RED}###"
@@ -107,3 +79,5 @@ re: fclean all
 
 norm:
 	@norminette $(SRC_DIR) includes/ | grep -v OK! || true
+
+-include ${DEPS}
